Add context location dropdown control

--- a/index.html
+++ b/index.html
@@ -906,6 +906,98 @@
       outline: none;
     }
 
+    .context-location {
+      width: 100%;
+      max-width: 260px;
+      position: relative;
+    }
+
+    .context-location__trigger {
+      width: 100%;
+      min-height: 52px;
+      padding: 0.65rem 0.75rem;
+      height: auto;
+      font-size: 0.95rem;
+      justify-content: space-between;
+      gap: 0.5rem;
+      background: rgba(13, 19, 25, 0.85);
+    }
+
+    .context-location__trigger span { text-transform: none; }
+
+    .context-location__boost {
+      color: var(--text-secondary);
+      font-size: 0.85rem;
+      font-weight: 600;
+    }
+
+    .context-location__caret {
+      opacity: 0.8;
+      font-size: 0.85rem;
+    }
+
+    .context-location__caption {
+      display: inline-block;
+      text-transform: none;
+      font-size: 0.78rem;
+      color: var(--text-secondary);
+      text-align: center;
+    }
+
+    .context-location__menu {
+      list-style: none;
+      margin: 0.35rem 0 0;
+      padding: 0.35rem;
+      position: absolute;
+      left: 50%;
+      transform: translateX(-50%);
+      width: 100%;
+      background: rgba(13, 19, 25, 0.95);
+      border: 1px solid rgba(124, 144, 160, 0.35);
+      border-radius: 14px;
+      box-shadow: 0 18px 45px rgba(0, 0, 0, 0.4);
+      max-height: 300px;
+      overflow-y: auto;
+      z-index: 10;
+    }
+
+    .context-location__menu[hidden] {
+      display: none;
+    }
+
+    .context-location__option {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      gap: 0.5rem;
+      padding: 0.55rem 0.65rem;
+      border-radius: 10px;
+      cursor: pointer;
+    }
+
+    .context-location__option[aria-selected="true"] {
+      background: rgba(45, 212, 195, 0.1);
+      border: 1px solid rgba(45, 212, 195, 0.5);
+    }
+
+    .context-location__option:hover,
+    .context-location__option:focus-visible {
+      outline: none;
+      background: rgba(31, 42, 54, 0.9);
+    }
+
+    .context-location__option-label {
+      font-size: 0.95rem;
+      font-weight: 600;
+      color: var(--text-primary);
+    }
+
+    .context-location__option-score {
+      font-size: 0.85rem;
+      color: var(--text-secondary);
+      white-space: nowrap;
+    }
+
     .neuro-checklist__body {
       display: grid;
       gap: clamp(1rem, 3vw, 1.5rem);
@@ -18614,30 +18706,41 @@ host.appendChild(row);
     ? window.SessionState
     : {};
 
+  const SOCIAL_CONTEXT_OPTIONS = [
+    { value: "home_solo", label: "Charting at home", score: 0.0 },
+    { value: "clinic_open_door", label: "Charting in exam room with door open", score: 0.7 },
+    { value: "clinic_workroom", label: "Charting in workroom", score: 0.5 },
+    { value: "cafe", label: "Charting in a cafe", score: 0.4 },
+    { value: "zoom_buddy", label: "Charting with a zoom buddy", score: 1.0 },
+  ];
+
+  const SOCIAL_SCORE_MAP = {
+    home_solo: 0.0,
+    clinic_open_door: 0.7,
+    clinic_workroom: 0.5,
+    cafe: 0.4,
+    zoom_buddy: 1.0,
+  };
+
   if (!SessionState.contextLocation) {
-    SessionState.contextLocation = "home_solo";
+    SessionState.contextLocation = SOCIAL_CONTEXT_OPTIONS[0].value;
   }
 
   if (typeof window !== "undefined") {
     window.SessionState = SessionState;
   }
 
-  const SOCIAL_SCORE_MAP = {
-    home_solo: 0.0,
-    clinic_closed: 0.4,
-    clinic_open_door: 0.7,
-    clinic_with_door_open: 0.7,
-    cafe: 0.8,
-    zoom_buddy: 1.0,
-  };
+  function getSocialContextOption(loc = SessionState.contextLocation || SOCIAL_CONTEXT_OPTIONS[0].value) {
+    return SOCIAL_CONTEXT_OPTIONS.find(option => option.value === loc) || SOCIAL_CONTEXT_OPTIONS[0];
+  }
 
   function getSocialContextScore() {
-    const loc = SessionState.contextLocation || "home_solo";
-    return SOCIAL_SCORE_MAP[loc] ?? 0;
+    const loc = SessionState.contextLocation || SOCIAL_CONTEXT_OPTIONS[0].value;
+    return SOCIAL_SCORE_MAP[loc] ?? getSocialContextOption(loc)?.score ?? 0;
   }
 
   function formatSocialContextLabel(loc = SessionState.contextLocation || "home_solo") {
-    return loc.replace(/_/g, " ");
+    return getSocialContextOption(loc)?.label || loc.replace(/_/g, " ");
   }
 
   function ensureChecklistLayout(card) {
@@ -18768,12 +18871,107 @@ host.appendChild(row);
 
     const availability = createControl("capacityWrench", "🔧", "Availability");
     const energy = createControl("energyDial", "🔋", "Energy");
-    const contextLocation = createControl("contextLocationButton", "👨‍💻", "Context");
+
+    const contextLocation = document.createElement("div");
+    contextLocation.className = "neuro-checklist__control context-location";
+
+    const contextButton = document.createElement("button");
+    contextButton.id = "contextLocationButton";
+    contextButton.type = "button";
+    contextButton.className = "context-location__trigger";
+    contextButton.setAttribute("aria-pressed", "false");
+    contextButton.setAttribute("aria-haspopup", "listbox");
+    contextButton.setAttribute("aria-expanded", "false");
+
+    const contextButtonLabel = document.createElement("span");
+    contextButtonLabel.dataset.contextLocationButtonLabel = "";
+
+    const contextButtonBoost = document.createElement("span");
+    contextButtonBoost.dataset.contextLocationButtonBoost = "";
+    contextButtonBoost.className = "context-location__boost";
+
+    const contextButtonCaret = document.createElement("span");
+    contextButtonCaret.className = "context-location__caret";
+    contextButtonCaret.setAttribute("aria-hidden", "true");
+    contextButtonCaret.textContent = "▾";
+
+    contextButton.append(contextButtonLabel, contextButtonBoost, contextButtonCaret);
+
+    const contextCaption = document.createElement("span");
+    contextCaption.dataset.contextLocationLabel = "";
+    contextCaption.className = "context-location__caption";
+
+    const contextMenu = document.createElement("ul");
+    contextMenu.id = "contextLocationMenu";
+    contextMenu.className = "context-location__menu";
+    contextMenu.setAttribute("role", "listbox");
+    contextMenu.hidden = true;
+
+    const closeContextMenu = () => {
+      contextMenu.hidden = true;
+      contextButton.setAttribute("aria-expanded", "false");
+    };
+
+    const openContextMenu = () => {
+      contextMenu.hidden = false;
+      contextButton.setAttribute("aria-expanded", "true");
+    };
+
+    const toggleContextMenu = (force) => {
+      const shouldOpen = typeof force === "boolean" ? force : contextMenu.hidden;
+      if (shouldOpen) {
+        openContextMenu();
+      } else {
+        closeContextMenu();
+      }
+    };
+
+    const selectContextLocation = (value) => {
+      SessionState.contextLocation = value;
+      updateContextLocationControls();
+      applyChecklistControlsState();
+      closeContextMenu();
+      contextButton.focus({ preventScroll: true });
+    };
+
+    SOCIAL_CONTEXT_OPTIONS.forEach(option => {
+      const item = document.createElement("li");
+      item.className = "context-location__option";
+      item.dataset.value = option.value;
+      item.setAttribute("role", "option");
+      item.tabIndex = -1;
+
+      const label = document.createElement("span");
+      label.className = "context-location__option-label";
+      label.textContent = option.label;
+
+      const score = document.createElement("span");
+      score.className = "context-location__option-score";
+      score.textContent = `${Math.round(option.score * 100)}% boost`;
+
+      item.append(label, score);
+
+      item.addEventListener("click", () => selectContextLocation(option.value));
+      item.addEventListener("keydown", (event) => {
+        if (event.key === "Enter" || event.key === " ") {
+          event.preventDefault();
+          selectContextLocation(option.value);
+        }
+        if (event.key === "Escape") {
+          closeContextMenu();
+          contextButton.focus({ preventScroll: true });
+        }
+      });
+
+      contextMenu.appendChild(item);
+    });
+
+    contextLocation.append(contextButton, contextCaption, contextMenu);
 
     host.append(
       availability.wrapper,
       energy.wrapper,
-      contextLocation.wrapper,
+      contextLocation,
     );
 
     host.dataset.controlsMounted = "true";
@@ -18793,20 +18991,26 @@ host.appendChild(row);
       openEnergySheet();
     });
 
-    const locationCaption = contextLocation.caption;
-    if (locationCaption) {
-      locationCaption.dataset.contextLocationLabel = "";
-    }
+    contextButton.addEventListener("click", () => {
+      toggleContextMenu();
+    });
 
-    contextLocation.button.addEventListener("click", () => {
-      const options = Object.keys(SOCIAL_SCORE_MAP).join(", ");
-      const current = SessionState.contextLocation || "home_solo";
-      const response = window.prompt(`Set your context location (${options})`, current);
-      if (response === null) return;
-      const normalized = response.trim().toLowerCase().replace(/\s+/g, "_") || "home_solo";
-      SessionState.contextLocation = normalized;
-      updateContextLocationControls();
-      applyChecklistControlsState();
+    contextButton.addEventListener("keydown", (event) => {
+      if (event.key === "Escape") {
+        closeContextMenu();
+      }
+      if (event.key === "ArrowDown" && contextMenu.hidden) {
+        event.preventDefault();
+        openContextMenu();
+        const firstOption = contextMenu.querySelector("[role='option']");
+        firstOption?.focus({ preventScroll: true });
+      }
+    });
+
+    document.addEventListener("click", (event) => {
+      if (!contextLocation.contains(event.target)) {
+        closeContextMenu();
+      }
     });
 
     updateContextLocationControls();
@@ -18850,16 +19054,36 @@ host.appendChild(row);
   function updateContextLocationControls() {
     const button = document.getElementById("contextLocationButton");
     const caption = document.querySelector("[data-context-location-label]");
+    const buttonLabel = document.querySelector("[data-context-location-button-label]");
+    const buttonBoost = document.querySelector("[data-context-location-button-boost]");
+    const menu = document.getElementById("contextLocationMenu");
+    const option = getSocialContextOption();
     const friendly = formatSocialContextLabel();
     const score = Math.round(getSocialContextScore() * 100);
 
     if (caption) {
-      caption.textContent = `Context (${friendly})`;
+      caption.textContent = `Context — ${friendly} (${score}% boost)`;
+    }
+
+    if (buttonLabel) {
+      buttonLabel.textContent = friendly;
+    }
+
+    if (buttonBoost) {
+      buttonBoost.textContent = `${score}% boost`;
     }
 
     if (button) {
       button.setAttribute("aria-label", `Context location — ${friendly} (${score}% social boost)`);
+      button.setAttribute("aria-expanded", menu?.hidden ? "false" : "true");
       button.classList.toggle("is-active", Boolean(SessionState.contextLocation));
+    }
+
+    if (menu) {
+      menu.querySelectorAll("[role='option']").forEach(item => {
+        const isSelected = item.dataset.value === option?.value;
+        item.setAttribute("aria-selected", isSelected ? "true" : "false");
+      });
     }
   }
 
