--- a/index.html
+++ b/index.html
@@ -8198,44 +8198,58 @@ box-shadow: 0 18px 40px rgb a(15,23,42,0.25);
       box-shadow: 0 0 0 1px rgba(45, 212, 195, 0.35), 0 16px 40px rgba(45, 212, 195, 0.35);
     }
     .focus-command-deck {
-  background: linear-gradient(145deg, rgba(15,18,26,0.98), rgba(12,22,20,0.9));
-  border: 1px solid rgba(147,160,170,0.22);
-  border-radius: 20px;
-  padding: 1.5rem;
-  width: var(--focus-shell-width);
-  margin: 1rem auto;
-  box-shadow: 0 20px 50px rgba(0,0,0,0.45);
-  display: flex;
-  flex-direction: column;
-  gap: 1.25rem;
-  color: #e6eef7;
-  font-family: "Inter", system-ui, sans-serif;
-}
+      background: linear-gradient(145deg, rgba(15, 18, 26, 0.98), rgba(12, 22, 20, 0.9));
+      border: 1px solid rgba(147, 160, 170, 0.22);
+      border-radius: 20px;
+      padding: clamp(1.4rem, 3vw, 1.8rem);
+      width: var(--focus-shell-width);
+      margin: clamp(0.9rem, 2vw, 1.35rem) auto;
+      box-shadow: 0 20px 50px rgba(0, 0, 0, 0.45);
+      display: flex;
+      flex-direction: column;
+      gap: clamp(1rem, 3vw, 1.35rem);
+      color: #e6eef7;
+      font-family: "Inter", system-ui, sans-serif;
+      position: relative;
+      overflow: hidden;
+    }
+
+    .focus-command-deck::after {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      height: 4px;
+      background: var(--tasker-brand-gradient);
+      border-radius: 16px 16px 12px 12px;
+      pointer-events: none;
+    }
 
 .focus-title {
-  font-size: clamp(1.4rem, 2.3vw, 1.6rem);
-  margin: 0;
-  color: #7bd88f;
-  font-weight: 600;
-  display: inline-flex;
-  align-items: center;
-  gap: 0.5rem;
-}
+      font-size: clamp(1.4rem, 2.3vw, 1.6rem);
+      margin: 0;
+      color: #7bd88f;
+      font-weight: 600;
+      display: inline-flex;
+      align-items: center;
+      gap: clamp(0.45rem, 1.2vw, 0.65rem);
+    }
 
 .focus-title__link {
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
-  width: 32px;
-  height: 32px;
-  padding: 0.35rem;
-  margin-left: 0;
-  border-radius: 10px;
-  border: 1px solid rgba(45, 212, 195, 0.4);
-  background: rgba(45, 212, 195, 0.18);
-  text-decoration: none;
-  transition: transform 160ms ease, box-shadow 160ms ease, background 160ms ease;
-}
+      display: inline-flex;
+      align-items: center;
+      justify-content: center;
+      width: 36px;
+      height: 36px;
+      padding: 0.35rem;
+      margin-left: 0;
+      border-radius: 10px;
+      border: 1px solid rgba(45, 212, 195, 0.4);
+      background: rgba(45, 212, 195, 0.18);
+      text-decoration: none;
+      transition: transform 160ms ease, box-shadow 160ms ease, background 160ms ease;
+    }
 
 .focus-title__link:hover,
 .focus-title__link:focus-visible {
@@ -8246,10 +8260,10 @@ box-shadow: 0 18px 40px rgb a(15,23,42,0.25);
 }
 
 .focus-title__icon {
-  width: 100%;
-  height: 100%;
-  object-fit: contain;
-}
+      width: 18px;
+      height: 18px;
+      object-fit: contain;
+    }
 
 .focus-top {
   display: flex;
